# aoc

./: aoc2022.sln
cpp/: CMakeLists.txt  day6_1.cpp  day6_2.cpp  day7_1.cpp  day7_2.cpp  day8_1.cpp  day8_2.cpp  utils.cpp  utils.h
cs/day1/: Program.cs  day1.csproj
cs/day2/: Program.cs  day2.csproj
python/: day1_1.py  day1_2.py  day2_1.py  day2_2.py  day3_1.py  day3_2.py  day4_1.py  day4_2.py  day5_1.py  day5_2.py
